fix: remove unneeded z-index rule

--- a/elements/rh-secondary-nav/rh-secondary-nav-menu.css
+++ b/elements/rh-secondary-nav/rh-secondary-nav-menu.css
@@ -4,11 +4,6 @@
 
 #container {
   position: relative;
-  z-index: -1;
-}
-
-#container.compact {
-  z-index: var(--rh-secondary-nav-z-index, 102);
 }
 
 #container:not(:is(.visible)) {
